--- a/App.css
+++ b/App.css
@@ -18,6 +18,7 @@
   border-radius: 5px;
   font-size: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  width: 500px;
 }
 
 .signup_form label {
@@ -26,7 +27,8 @@
 
 .signup_form input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="cpassword"]{
   width: 100%;
   height: 2rem;
   padding: 5px 10px;
@@ -41,7 +43,7 @@ input[type="password"] {
 }
 
 .signup_form button {
-  background-color: #ffe400;
+  background-color: #00FF00;
   color: #000;
   width: 100%;
   padding: 5px 10px;
@@ -52,11 +54,11 @@ input[type="password"] {
   margin: 1rem 0;
 }
 
-/* .error_container {
+.error_container {
   height: 1.2rem;
 }
 
 .form_error {
   font-size: 14px;
   color: red;
-} */
+}
